--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap');
+
 body {
   display              : grid;
-  font                 : 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font                 : 14px 'IBM Plex Sans', sans-serif;
   grid-template-rows   : [mast] 1fr [content] auto [base] 1fr;
   grid-template-columns: [side] 1fr [page] 6fr;
   width                : clamp(16rem, 90vw, 70rem);
@@ -89,7 +91,7 @@ textarea {
 
 button.example {
   border          : none;
-  outline         : 1px solid #a3d1ff;
+  outline         : 1px solid var(--primary-color);
   font-size       : .8em;
   border-radius   : 1px;
   background-color: transparent;
@@ -125,12 +127,12 @@ html,
 body {
   background : hsl(0, 0%, 2%);
   background : repeating-conic-gradient(hsl(0, 0%, 2%) 0% 25%, hsl(0, 0%, 5%) 0% 50%) 50%/ 3em 3em;
-  color      : #d6d6d6;
+  color      : var(--light-gray);
   font-family: sans-serif;
 }
 
 form {
-  border          : thin solid hsl(210, 100%, 82%);
+  border          : thin solid var(--primary-color);
   padding         : .5rem;
   margin          : 0;
   background-color: hsl(0, 0%, 5%);
@@ -221,4 +223,57 @@ os-statement {
     font-weight: bold;
     color: black;
     padding: 1em;
+}
+
+:root {
+  --primary-color: hsl(186, 84%, 40%);
+  --primary-light: hsl(186, 84%, 60%);
+  --light-color: hsl(186, 84%, 90%);
+  --darkest:#0d0d0d;
+  --dark:#1a1a1a;
+  --white:hsl(0,0%,100%);
+  --gray:hsl(0,0%,60%);
+  --light-gray:hsl(0,0%,90%);
+}
+
+a:active {
+  color: var(--white)
+}
+
+a:link,a {
+  color: var(--primary-light);
+}
+
+a:visited {
+  color: var(--gray);
+}
+
+a:hover {
+  color:var(--light-color);
+}
+
+h1, h2, h3, h4, h5, h6, button, input, textarea {
+  color:var(--primary-color);
+}
+
+h1 {
+  font-weight: bold;
+}
+
+h2,h3 {
+  font-family: 'IBM Plex Sans Light','IBM Plex Sans', sans-serif;
+}
+
+html {
+  background-color: var(--darkest);
+  color: var(--light-gray);
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 16px;
+  line-height: 1.8;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  scroll-padding-top: 5rem;
+  scroll-padding-bottom: 5rem;
 }
